--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "terry",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "pg": "^6.1.0"
   }
